@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-27T01:14:41Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 5 ],
-  "count_decinc" : [ -1, +5 ],
-  "uniques" : 3,
+  "timestamp" : "2023-07-27T16:19:57Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 5 ],
+  "count_decinc" : [ -3, +5 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
