@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-27T01:14:41Z",
+  "timestamp" : "2023-07-27T16:19:57Z",
   "count_outdated" : 715,
   "uniques_outdated" : 408,
-  "count" : 751,
+  "count" : 752,
   "uniques" : 430,
   "clones" : [
     {
       "timestamp": "2023-07-13T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 5 ],
-      "count_decinc": [ 1, 5 ],
-      "uniques": 3,
+      "count": 2,
+      "count_minmax": [ 2, 5 ],
+      "count_decinc": [ 3, 5 ],
+      "uniques": 2,
       "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2023-07-14T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
