@@ -1,11 +1,11 @@
 {
-  "count": 35,
+  "count": 34,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-07-13T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2023-07-14T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-07-27T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
